# SynthSeg-brain-generator

./: .gitignore  README.md  pyproject.toml
brain_augmentor/: __init__.py  analysis.py  cli.py  core.py
data/sample/: create_sample.py
scripts/: compare.py  generate.py  validate.py  visualize.py
synthseg/ext/lab2im/: layers.py
