[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "brain-augmentor"
version = "0.1.0"
description = "PyTorch reimplementation of SynthSeg's brain image generation pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.0",
    "nibabel>=4.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[project.scripts]
brain-generate = "brain_augmentor.cli:main"

[tool.setuptools.packages.find]
include = ["brain_augmentor*"]
